--- a/VikingEngine/VikingEngine.csproj
+++ b/VikingEngine/VikingEngine.csproj
@@ -64,6 +64,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Remove="DSSWars\Display\Translation\Swedish.cs" />
+    <Compile Remove="EngineSpace\HUD\Translation\OptionsLanguage_Swedish.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Remove="Icon.ico" />
