--- a/VikingEngine/VikingEngine.csproj
+++ b/VikingEngine/VikingEngine.csproj
@@ -67,8 +67,12 @@
     <Compile Remove="EngineSpace\HUD\Translation\OptionsLanguage_Swedish.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Remove="Content\Modding\ModConst.txt" />
     <None Remove="Icon.ico" />
     <None Remove="Icon.bmp" />
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Include="Content\Modding\ModConst.txt" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Icon.ico" />
@@ -84,6 +88,7 @@
 	</EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.11.0" />
     <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.1.303" />
     <PackageReference Include="MonoGame.Content.Builder.Task" Version="3.8.1.303" />
   </ItemGroup>
