--- a/VikingEngine/VikingEngine.csproj
+++ b/VikingEngine/VikingEngine.csproj
@@ -92,6 +92,9 @@
     <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.2.1105" />
     <PackageReference Include="MonoGame.Content.Builder.Task" Version="3.8.2.1105" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Content\DSS\BattleLab\" />
+  </ItemGroup>
   <Target Name="RestoreDotnetTools" BeforeTargets="Restore">
     <Message Text="Restoring dotnet tools" Importance="High" />
     <Exec Command="dotnet tool restore" />
